--- a/journal/202111.md
+++ b/journal/202111.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 November's highlights: {
 
 - Politeia release
-- two new reusable packages in dcrd, a one general purpose for working with big numbers, and one for building Decred apps
+- two new reusable packages in dcrd, one general purpose for working with big numbers, and one for building Decred apps
 - first official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged
 
 }
@@ -39,7 +39,7 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 A minor bug in consensus has been fixed where tickets voting on treasury spends have not been detected as voted and were falsely reported as [missed](https://github.com/decred/dcrd/pull/2780) in some RPC requests. Importantly, the bug cannot cause an unintended fork and only affects data served via RPC. The live ticket pool is still accurate and all votes and payouts are unaffected. The fix will require a database migration.
 
-Welcome [`uint256`](https://github.com/decred/dcrd/pull/2787), a new package implementing highly optimized allocation-free 256-bit integer arithmetic. It has the potential to speed up the initial chain sync by 5-10% when used in place of the standard library big integers. The package has strong focus on performance and correctness, and features arithmetic, boolean comparison, bitwise logic, bitwise shifts, conversion to/from relevant types, and full formatting support - all served with an ergonomic API, full test coverage and benchmarks. For a full dose of hacker's delight, follow how it came into existence [over 59 commits](https://github.com/decred/dcrd/pull/2787/commits) with a thorough README at the end.
+Welcome [`uint256`](https://github.com/decred/dcrd/pull/2787), a new package implementing highly optimized allocation-free 256-bit integer arithmetic. It has the potential to speed up the initial chain sync by 5-10% when used in place of the standard library big integers. The package has a strong focus on performance and correctness, and features arithmetic, boolean comparison, bitwise logic, bitwise shifts, conversion to/from relevant types, and full formatting support - all served with an ergonomic API, full test coverage, and benchmarks. For a full dose of hacker's delight, follow how it came into existence [over 59 commits](https://github.com/decred/dcrd/pull/2787/commits) with a thorough README at the end.
 
 The `uint256` package became the first step of a [long-term plan](https://github.com/decred/dcrd/issues/2786) to develop a new `primitives` module. It will become a new fundamental building block of consensus code by consolidating key concepts such as transactions, block headers, blocks, and sequence lock definitions, which are currently spread across multiple packages. Refined abstractions will make the distinction between consensus primitives and the data sharing protocol for greater clarity, and allow for significant performance optimizations.
 
@@ -84,7 +84,7 @@ User-facing changes:
 
 - implemented new UI design for [Confirm Seed](https://github.com/decred/decrediton/pull/3594) view to simplify the painful UX of entering seed words
 - added ability to restore a [DEX account](https://github.com/decred/decrediton/pull/3552) from a DEX seed
-- added ability to select custom intall [directory](https://github.com/decred/decrediton/pull/3572) for Bitcoin wallet. Any attempts to update existing `bitcoin.conf` have been removed.
+- added ability to select custom install [directory](https://github.com/decred/decrediton/pull/3572) for Bitcoin wallet. Any attempts to update the existing `bitcoin.conf` have been removed.
 - hidden the [legacy](https://github.com/decred/decrediton/pull/3587) VSP ticket purchasing UI as a first step to removing it
 - ~7 bug fixes
 
@@ -113,7 +113,7 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 New [Politeia](https://proposals.decred.org/) release is live! Highlights of v1.3.0:
 
 - billing statuses (will improve navigation and protect against invalid billing)
-- proposal statuses indicating the stage of proposal's life cycle
+- proposal statuses indicating the stage of the proposal's life cycle
 - SEO tags for prettier search engine results
 - various GUI UX improvements
 - parallel trickling in politeiavoter for better privacy and reliability
@@ -209,7 +209,7 @@ Internal changes:
 
 - added support for [DCR SPV](https://github.com/decred/dcrdex/pull/788) wallets
 - more accurate [sync status](https://github.com/decred/dcrdex/pull/1271) of the BTC wallet
-- removed ban and unban [endpoints](https://github.com/decred/dcrdex/pull/1272) because it is already handled elsewhere and because operator-initiated ban/unban is incompatible with a mesh configuration or a tiered/bonded user scheme (two future concepts)
+- removed the ban and unban [endpoints](https://github.com/decred/dcrdex/pull/1272) because it is already handled elsewhere and because operator-initiated ban/unban is incompatible with a mesh configuration or a tiered/bonded user scheme (two future concepts)
 - store [active matches](https://github.com/decred/dcrdex/pull/1263) in a separate storage bucket instead of marking them as active or retired
 - added rate [limits](https://github.com/decred/dcrdex/pull/1288) for new routes
 - ~7 bug fixes { 1266 1265 12645 1280 1282 1296 1298 - remove after review }
@@ -326,7 +326,7 @@ Two new proposals were submitted this month:
 
 - A [proposal](https://proposals.decred.org/record/0ff082d) to extend the communications and content work of the Decred Arabia team with $10,600 for another 10-12 months - in the previous period in-person events were curtailed and the budget was under-spent.
 
-The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program.
+The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program.
 
 > If you use politeiavoter to trickle in your proposal votes, make sure to upgrade to the v1.3.0 politeiavoter before the next round of voting. Retrying failed votes may not work properly if you don't. ([@lukebp](https://twitter.com/lukebp/status/1464627255108419586))
 
@@ -362,9 +362,9 @@ The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&z
 
 Chinese mining pools have experienced disruption as a result of Internet [censorship](https://www.theblockcrypto.com/post/125533/china-crypto-censorship-media-mining-pools) and [DNS issues](https://www.techspot.com/news/92397-major-mining-pools-facing-connectivity-issues-amid-chinese.html), and some have launched [alternative](https://twitter.com/ViaBTC/status/1465221867631886337) domains in response. This seems to have caused some redistribution of DCR hashrate, while the total hashrate has not been affected much.
 
-F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown operations in mainland China by the end of 2021. This was followed by the closure of mining pools for several coins including XMR, although DCR pool has been [online](https://www.f2pool.com/) with 46 Ph/s as of Dec 1.
+F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown operations in mainland China by the end of 2021. This was followed by the closure of mining pools for several coins including XMR, although the DCR pool has been [online](https://www.f2pool.com/) with 46 Ph/s as of Dec 1.
 
-Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
+Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
 Someone has [reported](https://twitter.com/Mattgetsbarrel1/status/1458878453198073866) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an [error](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
 
@@ -381,7 +381,7 @@ Odysee (LBRY) users please support the account.
 
 Trying out IG, feedback from IG veterans welcome https://www.instagram.com/decredproject/
 
-https://onlyfans.com/decred - I'll just post the link verbaitm. I don't know what to say. (@bee)
+https://onlyfans.com/decred - I'll just post the link verbatim. I don't know what to say. (@bee)
 
 Monde PR’s achievements for November
 
@@ -472,7 +472,7 @@ In November DCR was trading between USD 91.36-121.75 / BTC 0.001568-0.001936. Th
 
 { governance, funding, chain forks, community splits }
 
-Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts, and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
+Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
 
 The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308?s=20) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a twitter campaign against it.
 
@@ -480,15 +480,15 @@ Square [announced](https://bitcoinmagazine.com/business/jack-dorsey-square-decen
 
 A  community of crypto investors formed ConstitutionDAO to [try](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) and buy a rare copy of the US constitution, raised $40 million in ETH but then [lost](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) the auction to hedge fund CEO Ken Griffin. This cause a lot of uncertainty about what would happen to the contributed funds, with a new token being announced and cancelled, and the price of the PEOPLE token which contributors to the DAO had received fluctuated wildly. The project ultimately decided to wind down as no agreement could be reached on how to move it forward without the copy of the constitution, contributors can reclaim their ETH (but transaction fees will consume most or all of this for many of the smaller scale contributors) or claim their PEOPLE tokens.
 
-The infamous Infrastructure Bill has been [signed](https://twitter.com/jchervinsky/status/1461384347974615041) into law, set to take effect on Jan 1 2024. A bipartisan bill has been [introduced](https://twitter.com/jerrybrito/status/1461317078175072263) which would address the crypto community's concerns with the Infrastructure Bill.
+The infamous Infrastructure Bill has been [signed](https://twitter.com/jchervinsky/status/1461384347974615041) into law, set to take effect on Jan 1, 2024. A bipartisan bill has been [introduced](https://twitter.com/jerrybrito/status/1461317078175072263) which would address the crypto community's concerns with the Infrastructure Bill.
 
-Meanwhile the EU's approach to [regulating](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020PC0593) crypto-asset markets [appears](https://www.reddit.com/r/CryptoCurrency/comments/r218s7/the_most_important_piece_of_regulation_on/) to be proceeding in a more measured fashion and drawing a much clearer boundary around what and who is being regulated. 
+Meanwhile, the EU's approach to [regulating](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020PC0593) crypto-asset markets [appears](https://www.reddit.com/r/CryptoCurrency/comments/r218s7/the_most_important_piece_of_regulation_on/) to be proceeding in a more measured fashion and drawing a much clearer boundary around what and who is being regulated. 
 
 The ECC has [presented](https://electriccoin.co/blog/ecc-roadmap-calls-for-focus-on-wallet-proof-of-stake-and-interoperability/) a new Zcash road map which would see the project shift to Proof of Stake consensus over the next three years, with a focus on cross-chain interoperability and integrating governance features in the wallet. The other area being explored for Zcash is "[shielded assets](https://electriccoin.co/blog/update-ecc-research-and-paths-forward-for-zsas/)", representations of other assets on the zcash chain, but the report is on the fence about whether this would be beneficial and worthwhile. These priorities had been informed by voting of [forum members](https://vote.heliosvoting.org/helios/elections/5dd57b92-01ed-11ec-a0a8-ae3066fac55d/view) and [coin holders](https://electriccoin.co/blog/coin-holder-poll-results-summary/).
 
 Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the future of their brand, it followed a quadratic voting method which diminished the weight of whale voting accounts and voters picked between two logo and identity directions. The choice of directions was purely aesthetic. The process to revise these assets began in December 2020, it was [funded](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) with a budget of 10,000 euros. The final vote to choose one of the competing designs was conducted on a bespoke page and likely marks the first time that most of the 2,097 accounts voted - as the voting interface for funding proposals is much less accessible. 
 
-ETH has been added as a currency option by [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions) auction house, with live ETH bids being accepted during the auction and displayed on the feed - payment can also be made in BTC, USDC or fiat currency.
+ETH has been added as a currency option by [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions) auction house, with live ETH bids being accepted during the auction and displayed on the feed - payment can also be made in BTC, USDC, or fiat currency.
 
 Two of the Wyoming-based "DAOs" have been [prevented](https://www.coindesk.com/policy/2021/11/11/sec-stops-wyoming-based-dao-from-registering-2-digital-tokens/) from registering digital tokens as securities by the SEC because they provided deficient paperwork.
 
