add from twitter

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -205,6 +205,8 @@ User-facing changes:
 
 - show detailed [status](https://github.com/decred/dcrdex/pull/1287) for revoked matches (Refund pending, Refunded, Redeemed, or Complete)
 
+@chappjc shared a user-friendly [overview](https://twitter.com/chappjc/status/1457750847845195777) of recently added features like multi-asset fees or built-in Bitcoin SPV wallet.
+
 Internal changes:
 
 - added support for [DCR SPV](https://github.com/decred/dcrdex/pull/788) wallets
@@ -226,7 +228,7 @@ Progress towards Ethereum support:
 
 { what version is deployed at https://dex.decred.org/ now? }
 
-{ image candidates: not seeing any this time }
+{ image candidates: pick 1-2 from https://twitter.com/chappjc/status/1457750847845195777 }
 
 <a id="dcrandroid" />
 
@@ -326,7 +328,7 @@ Two new proposals were submitted this month:
 
 - A [proposal](https://proposals.decred.org/record/0ff082d) to extend the communications and content work of the Decred Arabia team with $10,600 for another 10-12 months - in the previous period in-person events were curtailed and the budget was under-spent.
 
-The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program.
+The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program. { maybe full quote the tweet }
 
 > If you use politeiavoter to trickle in your proposal votes, make sure to upgrade to the v1.3.0 politeiavoter before the next round of voting. Retrying failed votes may not work properly if you don't. ([@lukebp](https://twitter.com/lukebp/status/1464627255108419586))
 
@@ -429,7 +431,7 @@ Audio:
 
 Art and fun:
 
-- https://twitter.com/TheBochinchero/status/1459932658121822210 and similar
+- @bochinchero made a series of catchy images involving [bison](https://twitter.com/TheBochinchero/status/1459932658121822210) and what a revolution will _not_ be like ([centralized](https://twitter.com/TheBochinchero/status/1460288794767282187), [surveilled](https://twitter.com/TheBochinchero/status/1461030870861549578), [custodial](https://twitter.com/TheBochinchero/status/1461754024508723201), [centrally planned](https://twitter.com/TheBochinchero/status/1462836288982294528), and [rigged](https://twitter.com/TheBochinchero/status/1464335044164698122)
 
 Translations:
 
