--- a/journal/202111.md
+++ b/journal/202111.md
@@ -376,23 +376,19 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-{ overview of outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending the message out" }
+Decred now has an [Odysee channel](https://odysee.com/@Decred) where [YouTube](https://www.youtube.com/c/DecredChannel) content has been mirrored, just in case. As a bonus, it allows to watch Decred videos without visiting YouTube and Google. Odysee is powered by [LBRY](https://lbry.com), a blockchain-based content platform. Please consider supporting Decred videos if you use this platform.
 
-{ Odysee account https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$bkfiP9sHiMSVHcB17Bk_JnBmgalM3cU7BId4nY81qCY https://odysee.com/@Decred }
+October Decred Journal got a custom announcement on Decred's [Instagram](https://www.instagram.com/decredproject/p/CWRRcJPp3zr/) page, in addition to all existing channels. Veteran Instagram users are welcome to support the account or advise how to grow it.
 
-Odysee (LBRY) users please support the account.
+Last but not least, someone has registered an [OnlyFans account](https://onlyfans.com/decred) for Decred. It is hard to comment any further.
 
-Trying out IG, feedback from IG veterans welcome https://www.instagram.com/decredproject/
+Monde PR's achievements for November:
 
-https://onlyfans.com/decred - I'll just post the link verbatim. I don't know what to say. (@bee)
-
-Monde PR’s achievements for November
-
-- Pitched four stories/PR opps to finance and crypto publications
+- pitched 4 stories/PR opps to finance and crypto publications
 
 Secured the following news articles:
 
-- @jy-p was interviewed on [Benzinga’s Moon or Bust Show](https://www.youtube.com/watch?v=0My2w4p2-PE), talking about all things Decred  
+- @jy-p was interviewed on [Benzinga's Moon or Bust Show](https://www.youtube.com/watch?v=0My2w4p2-PE), talking about all things Decred
 - @jz was interviewed by [Authority Magazine](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48) on how to successfully invest in cryptocurrency. The article contains several Decred mentions. 
 
 
