--- a/journal/202111.md
+++ b/journal/202111.md
@@ -419,11 +419,13 @@ Translations:
 
 ## Markets
 
-In November DCR was trading between USD 91.36-121.75 / BTC 0.001568-0.001936. The average daily rate was $108.13.
+In November DCR was trading between USD 91.36-121.75 / BTC 0.0016-0.0019. The average daily rate was $108.13.
 
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+https://github.com/bochinchero/dcrsnapshots/blob/main/2021_11/2021-11_DEX_Daily_Volume_DCR_700.png
 
-{ dcrdex updates, esp. volume }
+https://github.com/bochinchero/dcrsnapshots/blob/main/2021_11/2021-11_DEX_Monthly_Volume_DCR_700.png
+
+{ ^ are monthly volumes correct? }
 
 
 ## Relevant External
