--- a/journal/202111.md
+++ b/journal/202111.md
@@ -434,21 +434,21 @@ https://github.com/bochinchero/dcrsnapshots/blob/main/2021_11/2021-11_DEX_Monthl
 
 { governance, funding, chain forks, community splits }
 
-Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
+Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on Twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
 
-The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308?s=20) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a twitter campaign against it.
+The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a Twitter campaign against it.
 
 Square [announced](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) a white paper detailing its proposal for a decentralized exchange, tbDEX. Square then [changed](https://squareup.com/us/en/press/square-changes-name-to-block) its name to Block.
 
-A  community of crypto investors formed ConstitutionDAO to [try](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) and buy a rare copy of the US constitution, raised $40 million in ETH but then [lost](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) the auction to hedge fund CEO Ken Griffin. This cause a lot of uncertainty about what would happen to the contributed funds, with a new token being announced and cancelled, and the price of the PEOPLE token which contributors to the DAO had received fluctuated wildly. The project ultimately decided to wind down as no agreement could be reached on how to move it forward without the copy of the constitution, contributors can reclaim their ETH (but transaction fees will consume most or all of this for many of the smaller scale contributors) or claim their PEOPLE tokens.
+A community of crypto investors formed ConstitutionDAO to [try](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) and buy a rare copy of the US constitution, raised $40 million in ETH but then [lost](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) the auction to hedge fund CEO Ken Griffin. This caused a lot of uncertainty about what would happen to the contributed funds, with a new token being announced and cancelled, and the price of the PEOPLE token which contributors to the DAO had received fluctuated wildly. The project ultimately decided to wind down as no agreement could be reached on how to move it forward without the copy of the constitution, contributors can reclaim their ETH (but transaction fees will consume most or all of this for many of the smaller scale contributors) or claim their PEOPLE tokens.
 
 The infamous Infrastructure Bill has been [signed](https://twitter.com/jchervinsky/status/1461384347974615041) into law, set to take effect on Jan 1, 2024. A bipartisan bill has been [introduced](https://twitter.com/jerrybrito/status/1461317078175072263) which would address the crypto community's concerns with the Infrastructure Bill.
 
-Meanwhile, the EU's approach to [regulating](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020PC0593) crypto-asset markets [appears](https://www.reddit.com/r/CryptoCurrency/comments/r218s7/the_most_important_piece_of_regulation_on/) to be proceeding in a more measured fashion and drawing a much clearer boundary around what and who is being regulated. 
+Meanwhile, the EU's approach to [regulating](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020PC0593) crypto-asset markets [appears](https://www.reddit.com/r/CryptoCurrency/comments/r218s7/the_most_important_piece_of_regulation_on/) to be proceeding in a more measured fashion and drawing a much clearer boundary around what and who is being regulated.
 
-The ECC has [presented](https://electriccoin.co/blog/ecc-roadmap-calls-for-focus-on-wallet-proof-of-stake-and-interoperability/) a new Zcash road map which would see the project shift to Proof of Stake consensus over the next three years, with a focus on cross-chain interoperability and integrating governance features in the wallet. The other area being explored for Zcash is "[shielded assets](https://electriccoin.co/blog/update-ecc-research-and-paths-forward-for-zsas/)", representations of other assets on the zcash chain, but the report is on the fence about whether this would be beneficial and worthwhile. These priorities had been informed by voting of [forum members](https://vote.heliosvoting.org/helios/elections/5dd57b92-01ed-11ec-a0a8-ae3066fac55d/view) and [coin holders](https://electriccoin.co/blog/coin-holder-poll-results-summary/).
+The ECC has [presented](https://electriccoin.co/blog/ecc-roadmap-calls-for-focus-on-wallet-proof-of-stake-and-interoperability/) a new Zcash road map which would see the project shift to proof-of-stake consensus over the next three years, with a focus on cross-chain interoperability and integrating governance features in the wallet. The other area being explored for Zcash is "[shielded assets](https://electriccoin.co/blog/update-ecc-research-and-paths-forward-for-zsas/)", representations of other assets on the Zcash chain, but the report is on the fence about whether this would be beneficial and worthwhile. These priorities had been informed by voting of [forum members](https://vote.heliosvoting.org/helios/elections/5dd57b92-01ed-11ec-a0a8-ae3066fac55d/view) and [coin holders](https://electriccoin.co/blog/coin-holder-poll-results-summary/).
 
-Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the future of their brand, it followed a quadratic voting method which diminished the weight of whale voting accounts and voters picked between two logo and identity directions. The choice of directions was purely aesthetic. The process to revise these assets began in December 2020, it was [funded](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) with a budget of 10,000 euros. The final vote to choose one of the competing designs was conducted on a bespoke page and likely marks the first time that most of the 2,097 accounts voted - as the voting interface for funding proposals is much less accessible. 
+Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the future of their brand, it followed a quadratic voting method which diminished the weight of whale voting accounts and voters picked between two logo and identity directions. The choice of directions was purely aesthetic. The process to revise these assets began in December 2020, it was [funded](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) with a budget of 10,000 euros. The final vote to choose one of the competing designs was conducted on a bespoke page and likely marks the first time that most of the 2,097 accounts voted - as the voting interface for funding proposals is much less accessible. { or much more accessible? }
 
 ETH has been added as a currency option by [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions) auction house, with live ETH bids being accepted during the auction and displayed on the feed - payment can also be made in BTC, USDC, or fiat currency.
 
