--- a/journal/202111.md
+++ b/journal/202111.md
@@ -7,12 +7,12 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 November's highlights: {
 
 - Politeia release
-- two new reusable packages in dcrd, one general purpose for working with big numbers, and one for building Decred apps
+- two new reusable packages in dcrd, one general purpose for working with big integers, and one for building Decred apps
 - first official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged
 
 }
 
-Contents: { sync }
+Contents:
 
 - [Development](#development)
 - [People](#people)
@@ -20,9 +20,7 @@ Contents: { sync }
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
@@ -41,7 +39,7 @@ A minor bug in consensus has been fixed where tickets voting on treasury spends 
 
 Welcome [`uint256`](https://github.com/decred/dcrd/pull/2787), a new package implementing highly optimized allocation-free 256-bit integer arithmetic. It has the potential to speed up the initial chain sync by 5-10% when used in place of the standard library big integers. The package has a strong focus on performance and correctness, and features arithmetic, boolean comparison, bitwise logic, bitwise shifts, conversion to/from relevant types, and full formatting support - all served with an ergonomic API, full test coverage, and benchmarks. For a full dose of hacker's delight, follow how it came into existence [over 59 commits](https://github.com/decred/dcrd/pull/2787/commits) with a thorough README at the end.
 
-The `uint256` package became the first step of a [long-term plan](https://github.com/decred/dcrd/issues/2786) to develop a new `primitives` module. It will become a new fundamental building block of consensus code by consolidating key concepts such as transactions, block headers, blocks, and sequence lock definitions, which are currently spread across multiple packages. Refined abstractions will make the distinction between consensus primitives and the data sharing protocol for greater clarity, and allow for significant performance optimizations.
+The `uint256` package became the first step of a [long-term plan](https://github.com/decred/dcrd/issues/2786) to develop a new `primitives` module. It will become a new fundamental building block of consensus code by consolidating key concepts such as transactions, block headers, blocks, and sequence lock definitions, which are currently spread across multiple packages. Refined abstractions will improve clarity by making the distinction between consensus primitives and the data sharing protocol, and allow for significant performance optimizations.
 
 Progress of the `stdscript` package (an effort to decouple "standard" from "consensus" script handling, in order to avoid unintended changes to consensus):
 
@@ -57,7 +55,7 @@ Other merged changes:
 - fill and check [fraud proof](https://github.com/decred/dcrd/pull/2804) data for transactions entering the mempool. This data includes the input amount, block height, and an index in that block, and allows efficient detection of fraudulent transactions trying to spend more than their inputs provide. As a bonus, it also allows efficient calculation of fees without slower loading of chain data or requiring a full transaction hash index.
 - upgrade code further [decoupled](https://github.com/decred/dcrd/pull/2776) from primary code to remain more stable as the primary code evolves
 - tuned [ping](https://github.com/decred/dcrd/pull/2796) interval to prevent undesirable disconnects in higher latency scenarios
-- optimized memory usage in [`netsync`](https://github.com/decred/dcrd/pull/2825)
+- optimized memory usage in [`netsync`](https://github.com/decred/dcrd/pull/2825) package
 - reworked logic for downloading [next blocks](https://github.com/decred/dcrd/pull/2828) to be more compatible with parallel block downloads from multiple peers
 - fixed an edge case in UTXO database [migration](https://github.com/decred/dcrd/pull/2798) (did not affect release builds)
 - fixed a [deadlock](https://github.com/decred/dcrd/pull/2806) on shutdown (did not affect release builds)
@@ -128,7 +126,7 @@ User-facing changes merged in November:
 
 - use an unambiguous [date format](https://github.com/decred/politeiagui/pull/2640) like `08 Sep 2021`
 - fixed [Go Back](https://github.com/decred/politeiagui/pull/2658) navigation
-- ~10 other bug fixes { 2651 2661 2660 2663 2659 2665 2666 2668 2670 2673 - remove after review }
+- ~10 other bug fixes
 
 Internal GUI changes:
 
@@ -140,10 +138,10 @@ Backend changes:
 - [prevent](https://github.com/decred/politeia/pull/1575) RFP proposals from billing status changes (they cannot bill against the treasury, unlike RFP submissions)
 - introduced [`approved`](https://github.com/decred/politeia/pull/1578) status for proposals that cannot bill against the treasury (like RFP), to differentiate from `active` status that can bill
 - implemented [session](https://github.com/decred/politeia/pull/1564) storage in MySQL
-- implemented data integrity checks for the [`usermd`](https://github.com/decred/politeia/pull/1581) ("user metadata") plugin. This is the final check needed to proceed with importing [legacy](https://github.com/decred/politeia/issues/1425) Git proposals into the new tstore.
+- implemented data integrity checks for the [`usermd`](https://github.com/decred/politeia/pull/1581) ("user metadata") plugin. This is the final check needed to proceed with [importing](https://github.com/decred/politeia/issues/1425) legacy Git proposals into the new tstore.
 - allow to set the [status](https://github.com/decred/politeia/pull/1583) of proposals created with the `pictl seedproposals` command (helps in testing)
 - added printing of execution [time statistics](https://github.com/decred/politeia/pull/1585) to the `pictl` command to help with performance testing
-- ~2 bug fixes { 1579 1561 - remove after review }
+- ~2 bug fixes
 
 `politeiavoter` command-line tool:
 
@@ -214,13 +212,13 @@ Internal changes:
 - removed the ban and unban [endpoints](https://github.com/decred/dcrdex/pull/1272) because it is already handled elsewhere and because operator-initiated ban/unban is incompatible with a mesh configuration or a tiered/bonded user scheme (two future concepts)
 - store [active matches](https://github.com/decred/dcrdex/pull/1263) in a separate storage bucket instead of marking them as active or retired
 - added rate [limits](https://github.com/decred/dcrdex/pull/1288) for new routes
-- ~7 bug fixes { 1266 1265 12645 1280 1282 1296 1298 - remove after review }
+- ~7 bug fixes
 
 Progress towards Ethereum support:
 
 - implemented: fetching of raw [transaction data](https://github.com/decred/dcrdex/pull/1279), basic contract [validation](https://github.com/decred/dcrdex/pull/1273), [Swap](https://github.com/decred/dcrdex/pull/1248) function, and [SwapConfirmations](https://github.com/decred/dcrdex/pull/1315) function
 - [pack](https://github.com/decred/dcrdex/pull/1305) the Swap struct (essentially reorder it) to save 5-15% gas when initializing and redeeming swaps
-- removed function for [initiating](https://github.com/decred/dcrdex/pull/1262) a single swap in favor of the batched version, in order to reduce smart contract code and client+server code around it
+- removed function for [initiating](https://github.com/decred/dcrdex/pull/1262) a single swap in favor of the batched version, in order to reduce smart contract code and client+server code around it (less code is easier to audit)
 - updated the swap contract to [redeem](https://github.com/decred/dcrdex/pull/1274) swaps in batches too
 - [lock](https://github.com/decred/dcrdex/pull/1291) funds for a possible refund
 - calculate [pending balance](https://github.com/decred/dcrdex/pull/1303) by taking into account pending incoming and outgoing transactions
@@ -259,15 +257,15 @@ _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and
 - implemented new UI design for the [Staking](https://github.com/planetdecred/godcr/pull/679) page (renamed from Tickets)
 - implemented new [Governance](https://github.com/planetdecred/godcr/pull/691) UI with a new welcome page
 - updated [Settings](https://github.com/planetdecred/godcr/pull/684) page design
-- show account [mixer](https://github.com/planetdecred/godcr/pull/701) view on the Overview page
-- added ability to spend from the [unmixed](https://github.com/planetdecred/godcr/issues/674) account
-- ~9 bug fixes { 682 685 692 691*2 695 696 704 693 - remove after review }
+- show account [mixer](https://github.com/planetdecred/godcr/pull/701) summary on the Overview page
+- added ability to spend from the [unmixed](https://github.com/planetdecred/godcr/issues/674) account (for those who know what they're doing)
+- ~9 bug fixes
 
 Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by Android/iOS wallets and GoDCR):
 
 - added [`dexdcr`](https://github.com/planetdecred/dcrlibwallet/pull/210) package to allow client apps to integrate DCRDEX
 
-> Hello, after careful consideration the Planet Decred team has determined that we are going to delay the GoDCR proposal v2 until we have a mainnet release. Because of this, please look for the v2 GoDCR proposal to post sometime in January. 1.0 mainnet GoDCR should be finished by the end of the year. ([@monsa00](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$GJ7PliGPTamNznbE7D82QfK05Hm6wQpogg8x2aQkCmw))
+> Hello, after careful consideration the Planet Decred team has determined that we are going to delay the GoDCR proposal v2 until we have a mainnet release. Because of this, please look for the v2 GoDCR proposal to post sometime in January. 1.0 mainnet GoDCR should be finished by the end of the year. (@monsa00 on [2021-12-02](https://matrix.to/#/!gruHpujXftcsHcghjx:planetdecred.org/$GJ7PliGPTamNznbE7D82QfK05Hm6wQpogg8x2aQkCmw))
 
 { image candidates: 685 701 - if you have better images please share }
 
@@ -277,7 +275,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 _dcrros is a middleware service that provides access to the Decred network via Rosetta API._
 
-- v0.1.0 has been declared as the first official release of dcrros. It embeds core Decred software v1.6.0 and implements Rosetta spec v1.4.10. See the full list of features in the [release notes](https://github.com/decred/dcrros/blob/master/docs/release-notes/release-notes-0.1.0.md).
+- v0.1.0 has been tagged as the first official release of dcrros. It embeds core Decred software v1.6.0 and implements Rosetta spec v1.4.10. See the full list of features in the [release notes](https://github.com/decred/dcrros/blob/master/docs/release-notes/release-notes-0.1.0.md).
 - updated to use [latest](https://github.com/decred/dcrros/pull/23) released Decred v1.6.2 and Rosetta SDK v0.7.2. Also added an `--offline` flag to simplify running offline instances of dcrros (e.g. for tx construction and signing, possibly on an airgapped setup).
 - the above change has been released as [v0.1.1](https://github.com/decred/dcrros/pull/24)
 
@@ -389,7 +387,7 @@ Monde PR's achievements for November:
 Secured the following news articles:
 
 - @jy-p was interviewed on [Benzinga's Moon or Bust Show](https://www.youtube.com/watch?v=0My2w4p2-PE), talking about all things Decred
-- @jz was interviewed by [Authority Magazine](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48) on how to successfully invest in cryptocurrency. The article contains several Decred mentions. 
+- @jz was interviewed by [Authority Magazine](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48) on how to successfully invest in cryptocurrency. The article contains several Decred mentions.
 
 
 ## Media
