--- a/journal/202111.md
+++ b/journal/202111.md
@@ -305,8 +305,6 @@ Other:
 
 ## People
 
-{ interviews about people. link to #media for generic references ("3 interviews") and link directly for specific references and/or with quotes }
-
 Community stats as of Dec 1:
 
 - [Twitter](https://twitter.com/decredproject) followers: 50,116 (+613)
@@ -321,13 +319,15 @@ Community stats as of Dec 1:
 
 In November the new [treasury](https://dcrdata.decred.org/treasury) received 10,206 DCR worth $1.1 million at the month's average rate of $108.13. 1,995 DCR was spent to pay contractors, consisting of 974 DCR for September and 1,021 DCR for October. The latter is worth $110K at November's rate, or $124K at October's billing rate of $121.57. As of Dec 6, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 743,661 DCR (73 million USD at $98.01).
 
-Two new proposals were submitted this month:
+Two new proposals were submitted this month: { update status maybe }
 
-- A [proposal](https://proposals.decred.org/record/427e1d4) to change the subsidy (block ward) split from the current setting (60/30 PoW/PoS) to favor PoS (10/80) was submitted by @jy-p. If passed the work would be expected to be complete within a few weeks at a cost of no more than $30,000, and the change would take effect once it is introduced and voted on via a consensus change proposal. It ended up collecting 166 comments on Politeia and 60+ on [Reddit](https://www.reddit.com/r/decred/comments/r3jq5a/change_powpos_subsidy_split_from_6030_to_1080/).
+- A [proposal](https://proposals.decred.org/record/427e1d4) to change the subsidy (block reward) split from the current setting (60/30 PoW/PoS) to favor PoS (10/80) was submitted by @jy-p. If passed the work would be expected to be complete within a few weeks at a cost of no more than $30,000, and the change would take effect once it is introduced and voted on via a consensus change proposal. It ended up collecting 166 comments on Politeia and 60+ on [Reddit](https://www.reddit.com/r/decred/comments/r3jq5a/change_powpos_subsidy_split_from_6030_to_1080/).
 
 - A [proposal](https://proposals.decred.org/record/0ff082d) to extend the communications and content work of the Decred Arabia team with $10,600 for another 10-12 months - in the previous period in-person events were curtailed and the budget was under-spent.
 
-The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program. { maybe full quote the tweet }
+The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program.
+
+Anybody voting via command line please upgrade:
 
 > If you use politeiavoter to trickle in your proposal votes, make sure to upgrade to the v1.3.0 politeiavoter before the next round of voting. Retrying failed votes may not work properly if you don't. ([@lukebp](https://twitter.com/lukebp/status/1464627255108419586))
 
@@ -338,6 +338,8 @@ See Politeia Digest [issue 49](https://blockcommons.red/politeia-digest/issue049
 
 **Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) opened at ~278 Ph/s and closed ~437 Ph/s, bottoming at 221 Ph/s and peaking at 441 Ph/s throughout the month.
 
+{ hashrate image }
+
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Dec 1: AntPool 36%, Poolin 34%, F2Pool 13%, ViaBTC 7%, Luxor 6%, BTC.com 3%, OKEx 0.4%, CoinMine 0.16%.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kvddhno1-kwon4zhl&axis=time&visibility=true-true&mode=stepped) varied between 139.1-327.8 DCR, with 30-day [average](https://dcrstats.com/) at 203.6 DCR (+12.0).
@@ -345,8 +347,6 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) was 7.42-8.19 million DCR, meaning that 54.7-60.5% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kvddhno1-kwon4zhl&scale=linear&bin=block&axis=time) in proof-of-stake.
 
 After a large drop in stake participation and ticket price, the following ticket buying has sent the price to a new ATH of 327.8 DCR.
-
-{ ticket chart from bochinchero https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$jz8tWeRZ9MurrDNrdnZJ4mejk5oE7z11V18XlLTwz1g }
 
 **VSP**: On Dec 1, ~6,800 (-600) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 195 (-29) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 17.5% (-1.4%) of the ticket pool. The 3 unlisted but still active legacy VSPs managed 45 (+10) live tickets.
 
@@ -356,12 +356,12 @@ Node versions as of Dec 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 52.9-55.1% and set a new all-time high with the sum of mixed unspent coins above 7.5 million.
 
-{ any interesting analysis or events in the network }
+{ pick a few most interesting images from https://github.com/bochinchero/dcrsnapshots - any ideas @bochinchero? }
 
 
 ## Ecosystem
 
-Chinese mining pools have experienced disruption as a result of Internet [censorship](https://www.theblockcrypto.com/post/125533/china-crypto-censorship-media-mining-pools) and [DNS issues](https://www.techspot.com/news/92397-major-mining-pools-facing-connectivity-issues-amid-chinese.html), and some have launched [alternative](https://twitter.com/ViaBTC/status/1465221867631886337) domains in response. This seems to have caused some redistribution of DCR hashrate, while the total hashrate has not been affected much.
+Chinese mining pools have experienced disruption as a result of Internet [censorship](https://www.theblockcrypto.com/post/125533/china-crypto-censorship-media-mining-pools) and [DNS issues](https://www.techspot.com/news/92397-major-mining-pools-facing-connectivity-issues-amid-chinese.html), and some have launched [alternative](https://twitter.com/ViaBTC/status/1465221867631886337) domains in response. This seems to have caused some redistribution of Decred hashrate, while the total hashrate has not been affected much.
 
 F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown operations in mainland China by the end of 2021. This was followed by the closure of mining pools for several coins including XMR, although the DCR pool has been [online](https://www.f2pool.com/) with 46 Ph/s as of Dec 1.
 
@@ -374,9 +374,9 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Outreach
 
-Decred now has an [Odysee channel](https://odysee.com/@Decred) where [YouTube](https://www.youtube.com/c/DecredChannel) content has been mirrored, just in case. As a bonus, it allows to watch Decred videos without visiting YouTube and Google. Odysee is powered by [LBRY](https://lbry.com), a blockchain-based content platform. Please consider supporting Decred videos if you use this platform.
+Decred now has an [Odysee channel](https://odysee.com/@Decred) where [YouTube](https://www.youtube.com/c/DecredChannel) content has been mirrored, just in case. As a bonus, it allows to watch Decred videos without visiting YouTube and Google. Odysee is powered by [LBRY](https://lbry.com), a decentralized protocol fair and robust content distribution (with optional monetization). Please consider supporting Decred videos if you use this platform.
 
-October Decred Journal got a custom announcement on Decred's [Instagram](https://www.instagram.com/decredproject/p/CWRRcJPp3zr/) page, in addition to all existing channels. Veteran Instagram users are welcome to support the account or advise how to grow it.
+October Decred Journal had an experimental custom announcement on Decred's [Instagram](https://www.instagram.com/decredproject/p/CWRRcJPp3zr/) page, in addition to all existing channels. Veteran Instagram users are welcome to support the account or advise how to grow it.
 
 Last but not least, someone has registered an [OnlyFans account](https://onlyfans.com/decred) for Decred. It is hard to comment any further.
 
@@ -394,12 +394,14 @@ Secured the following news articles:
 
 Selected articles:
 
-- Jonathan Zeppettini of Decred on the 5 things you need to understand in order to successfully invest in cryptocurrency by Tyler Gallagher of Authority Magazine ([medium](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48))
 - Decred: A top tier cryptocurrency by Andy Hecht ([investing.com](https://www.investing.com/analysis/decred-a-top-tier-cryptocurrency-200609428))
+- Jonathan Zeppettini of Decred on the 5 things you need to understand in order to successfully invest in cryptocurrency by Tyler Gallagher of Authority Magazine ([medium](https://medium.com/authority-magazine/jonathan-zeppettini-on-the-5-things-you-need-to-understand-in-order-to-successfully-invest-in-2f09bff32e48))
+
+> You need to understand yourself, and that the journey will be a never-ending learning experience. There are three traits you will also want to cultivate if you want to have any chance at success in my view: patience, discipline, and focus. As with any type of investing these will determine your outcome. (@jz)
 
 Videos:
 
-- Market Update | Decred Interview | Moon or Bust by Logan Ross of Benzinga ([youtube](https://www.youtube.com/watch?v=0My2w4p2-PE)) - @jy-p talks Decred and answeres questions from chat, starting [29 min](https://www.youtube.com/watch?v=0My2w4p2-PE&t=29m19s)
+- Market update | Decred interview | Moon or bust by Logan Ross of Benzinga ([youtube](https://www.youtube.com/watch?v=0My2w4p2-PE)) - @jy-p talks Decred and answeres questions from chat, starting [29 min](https://www.youtube.com/watch?v=0My2w4p2-PE&t=29m19s)
 
 Audio:
 
@@ -407,7 +409,7 @@ Audio:
 
 Art and fun:
 
-- @bochinchero made a series of catchy images involving [bison](https://twitter.com/TheBochinchero/status/1459932658121822210) and what a revolution will _not_ be like ([centralized](https://twitter.com/TheBochinchero/status/1460288794767282187), [surveilled](https://twitter.com/TheBochinchero/status/1461030870861549578), [custodial](https://twitter.com/TheBochinchero/status/1461754024508723201), [centrally planned](https://twitter.com/TheBochinchero/status/1462836288982294528), and [rigged](https://twitter.com/TheBochinchero/status/1464335044164698122)
+- @bochinchero made a series of catchy images involving [bison](https://twitter.com/TheBochinchero/status/1459932658121822210) and what a revolution will _not_ be like ([centralized](https://twitter.com/TheBochinchero/status/1460288794767282187), [surveilled](https://twitter.com/TheBochinchero/status/1461030870861549578), [custodial](https://twitter.com/TheBochinchero/status/1461754024508723201), [centrally planned](https://twitter.com/TheBochinchero/status/1462836288982294528), and [rigged](https://twitter.com/TheBochinchero/status/1464335044164698122))
 
 Translations:
 
@@ -428,10 +430,6 @@ https://github.com/bochinchero/dcrsnapshots/blob/main/2021_11/2021-11_DEX_Monthl
 
 ## Relevant External
 
-{ cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
-
-{ governance, funding, chain forks, community splits }
-
 Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on Twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
 
 The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a Twitter campaign against it.
@@ -451,12 +449,6 @@ Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the fu
 ETH has been added as a currency option by [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions) auction house, with live ETH bids being accepted during the auction and displayed on the feed - payment can also be made in BTC, USDC, or fiat currency.
 
 Two of the Wyoming-based "DAOs" have been [prevented](https://www.coindesk.com/policy/2021/11/11/sec-stops-wyoming-based-dao-from-registering-2-digital-tokens/) from registering digital tokens as securities by the SEC because they provided deficient paperwork.
-
-{ DEX }
-
-{ relevant exchanges and websites }
-
-{ other: regulations, privacy, security, fun }
 
 That's all for November. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
