--- a/journal/202111.md
+++ b/journal/202111.md
@@ -6,9 +6,11 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 November's highlights: {
 
+- an epic PoW/PoS proposal
 - Politeia release
 - two new reusable packages in dcrd, one general purpose for working with big integers, and one for building Decred apps
 - first official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged
+- other ideas?
 
 }
 
