add intro bullets

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -6,10 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 November's highlights: {
 
-- an epic PoW/PoS proposal
-- Politeia release
-- two new reusable packages in dcrd, one general purpose for working with big integers, and one for building Decred apps
-- first official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged
+- A huge proposal to change the distribution of Decred block rewards so that PoW miners get a much smaller share was published, discussed and has now been approved.
+- Politeia v1.3.0 is live in the wild, bringing improvements to the handling of proposal status and pre-release testing.
+- Two new reusable packages have been developed in dcrd, one general purpose for working with big integers, and one for building Decred apps
+- First official releases of dcrros (Decred Rosetta implementation) v0.1.0 and v0.1.1 have been tagged {not sure of significance of this}
 - other ideas?
 
 }
