Eco use working link for FTX

--- a/journal/202111.md
+++ b/journal/202111.md
@@ -367,7 +367,7 @@ F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown 
 
 Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
-Someone has [reported](https://twitter.com/Mattgetsbarrel1/status/1458878453198073866) { this link looks like just a chart, possibly because the tweet being linked to is set to only be visible to certain accounts } that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an [error](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
+Someone has [reported](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an error of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
